test/types/tuple/dinan/badIndex.good
badIndex.chpl:8: error: tuple index -2 is out of bounds
badIndex.chpl:8: note: tuple elements start at index 0
