test/types/tuple/dinan/badIndex.chpl
// This should generate an error message.  Presently generates
// an internal error.

var x = ("Fahr", "vergnügen");

writeln(x(0), x(1));

writeln(x(-2), x(-1));
